--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node connect.js",
     "debug": "ndb server.js"
@@ -35,8 +38,5 @@
   },
   "devDependencies": {
     "prettier": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=10.0.0"
   }
 }
