--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "nodemailer": "^6.9.5",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "streamifier": "^0.1.1",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
