--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "node connect.js",
+    "start": "nodemon connect.js",
     "debug": "ndb server.js"
   },
   "author": "",
