--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": ">=10.0.0"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node connect.js",
